experiment-01/k8s/templates/portal/kubernetes-experiments-01-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-experiments-01-portal
  namespace: kubernetes-experiments-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes-experiments-01-portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-experiments-01
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: kubernetes-experiments-01-portal
    spec:
      containers:
        - name: kubernetes-experiments-01-portal
          image: cebartling/k8s-experiments-01-portal
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
      restartPolicy: Always
