experiment-01/k8s/templates/portal/kubernetes-experiments-01-portal-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubernetes-experiments-01-portal
  labels:
    app.kubernetes.io/name: kubernetes-experiments-01
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: kubernetes-experiments-01-portal
spec:
  containers:
    - name: kubernetes-experiments-01-portal
      image: cebartling/k8s-experiments-01-portal
      resources:
        requests:
          memory: "512Mi"
          cpu: "200m"
        limits:
          memory: "512Mi"
      ports:
        - containerPort: 3000
          name: http
          protocol: TCP
