experiment-01/k8s/templates/portal/kubernetes-experiments-01-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-experiments-01-portal-ingress
  namespace: kubernetes-experiments-01
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-experiments-01-portal
                port:
                  number: 3000
